minor file changes

--- a/css/cmps/about-page.css
+++ b/css/cmps/about-page.css
@@ -1,10 +1,10 @@
-.about-page-container {
+.about-page {
     max-width: 800px;
     margin: 50px auto;
     font-size: 20px;
 }
 
-.about-page-container img {
+.about-page img {
     height: 300px;
     width: 300px;
     object-fit: cover;
