--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -1,8 +1,8 @@
-.welcome-page-container img {
+.welcome-page img {
     width: 100%;
 }
 
-.welcome-page-container h1 {
+.welcome-page h1 {
     position: absolute;
     top: 220px;
     right: 180px;
