--- a/css/cmps/book-add.css
+++ b/css/cmps/book-add.css
@@ -1,8 +1,8 @@
-.book-add-container {
+{
     margin-top: 15px;
 }
 
-.book-add-container button {
+button {
     background-color: #36a097;
     padding: 7px;
     border-radius: 5px;
@@ -12,7 +12,7 @@
     margin-left: 15px;
 }
 
-.book-add-container input {
+input {
     outline: none;
     border-radius: 5px;
     padding: 7px;
@@ -20,32 +20,32 @@
     border: 1px solid #b0b0b0;
 }
 
-.book-add-container h2 {
+h2 {
     font-size: 20px;
     color: #1d9389;
     font-size: 23px;
     margin-right: 0;
 }
 
-.book-add-container .searched-books {
+.searched-books {
     width: 100%;
 }
 
-.book-add-container .searched-books div {
+.searched-books div {
     width: 450px;
     margin: 25px auto;
 }
 
-.book-add-container .searched-books img {
+.searched-books img {
     height: 100%;
 }
 
-.book-add-container .searched-books button {
+.searched-books button {
     padding: 12px;
     height: 36px;
 }
 
-.book-add-container .searched-books h5 {
+.searched-books h5 {
     width: 235px;
     text-align: center;
 }
