--- a/css/cmps/book-app.css
+++ b/css/cmps/book-app.css
@@ -1,4 +1,4 @@
-.book-app-container .add-book-btn {
+.book-app .add-book-btn {
     border: 2px solid #36a097;
     padding: 10px;
     background-color: white;
