--- a/css/cmps/book-details.css
+++ b/css/cmps/book-details.css
@@ -1,38 +1,38 @@
-.book-details-container .book-details {
+.book-details .book-details {
     padding: 10px 50px;
     margin-bottom: 18px;
 }
 
-.book-details-container ul {
+.book-details ul {
     padding: 0;
 }
 
-.book-details-container .reviews {
+.book-details .reviews {
     width: 90%;
     margin-top: 15px;
 }
 
-.book-details-container .reviews .name {
+.book-details .reviews .name {
     color: #35877c;
     margin: 10px;
 }
 
-.book-details-container .reviews .txt {
+.book-details .reviews .txt {
     width: 100%;
 }
 
-.book-details-container .reviews .txt span {
+.book-details .reviews .txt span {
     color: #696969;
 }
 
-.book-details-container li {
+.book-details li {
     color: #35877c;
     border: 1px solid #d0d0d0;
     margin-bottom: 10px;
     position: relative;
 }
 
-.book-details-container .remove-btn {
+.book-details .remove-btn {
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -42,55 +42,55 @@
     outline: none;
 }
 
-.book-details-container .info {
+.book-details .info {
     margin-left: 30px;
     width: 450px;
 }
 
-.book-details-container .reviews .info {
+.book-details .reviews .info {
     margin-left: 30px;
     width: 160px;
 }
 
-.book-details-container h3 {
+.book-details h3 {
     color: #1c847b;
     font-size: 25px;
     margin: 10px 0;
 }
 
-.book-details-container h4, .book-details-container p {
+.book-details h4, .book-details p {
     color: #424242;
 }
 
-.book-details-container span {
+.book-details span {
     font-weight: normal;
     margin-left: 10px;
     color: black;
     font-size: 16px;
 }
 
-.book-details-container img {
+.book-details img {
     margin: 50px 40px 0 0;
     height: 300px;
     border-radius: 10px;
     align-self: flex-start;
 }
 
-.book-details-container p {
+.book-details p {
     font-weight: bold;
     margin: 10px 0;
 }
 
-.book-details-container .reading-lvl {
+.book-details .reading-lvl {
     color: #35877c;
 }
 
-.book-details-container .book-condition {
+.book-details .book-condition {
     color: #616161;
     font-weight: normal;
 }
 
-.book-details-container .close-btn {
+.book-details .close-btn {
     font-size: 30px;
     position: absolute;
     top: 10px;
@@ -102,20 +102,20 @@
     outline: none;
 }
 
-.book-details-container p.red {
+.book-details p.red {
     color: red;
 }
 
-.book-details-container p.green {
+.book-details p.green {
     color: green;
 }
 
-.book-details-container span.sale {
+.book-details span.sale {
     color: #1c847b;
     font-size: 1.3em;
 }
 
-.book-details-container .navigate {
+.book-details .navigate {
     width: 100%;
     padding: 15px 25px 0;
     color: #35877c;
