--- a/css/cmps/book-preview.css
+++ b/css/cmps/book-preview.css
@@ -1,4 +1,4 @@
-.book-preview-container {
+.book-preview {
     padding: 10px;
     margin: 10px;
     width: 230px;
@@ -10,11 +10,11 @@
     transition: background .3s ease-out;
 }
 
-.book-preview-container:hover {
+.book-preview:hover {
     background-color: #cbd0d0;
 }
 
-.book-preview-container p {
+.book-preview p {
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -23,7 +23,7 @@
     margin-left: -25px;
 }
 
-.book-preview-container img {
+.book-preview img {
     width: 200px;
     display: block;
     margin: 0 auto;
