notes - adding and rendering

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@
 @import './cmps/about-page.css';
 @import './cmps/book-app.css';
 @import './cmps/book-add.css';
+@import './cmps/note-preview.css';
+@import './cmps/note-list.css';
 
 
 
