--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
 @import './cmps/about-page.css';
 @import './cmps/book-app.css';
 @import './cmps/book-add.css';
+@import './cmps/email-app.css';
 
 
 
