--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 @import './cmps/book-add.css';
 @import './cmps/email-app.css';
 @import './cmps/note-list.css';
+@import './cmps/note-add.css';
 
 
 
