--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -1,7 +1,14 @@
 .note-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 334px));
+    /* column-count: 3; */
 }
+
+.note-list .note-preview.selected {
+    border: 1px solid black;
+}
+
+
 
 .note-list .note-preview img {
     max-height: 300px;
@@ -12,6 +19,12 @@
     border: 1px solid gray;
     padding: 10px;
     margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.note-list .note-preview p {
+    margin: 0;
 }
 
 .note-list .note-preview .marked {
