--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -4,8 +4,10 @@
 
 .welcome-page h1 {
     position: absolute;
-    top: 220px;
-    right: 180px;
-    color: #e7ece2;
-    font-size: 75px;
+    top: 250px;
+    left: 230px;
+    margin-top: -85px;
+    margin-left: -30px;
+    color: #f6f6f6;
+    font-size: 80px;
 }
