--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -1,14 +1,13 @@
 .note-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 334px));
-    /* column-count: 3; */
+    grid-auto-flow: row;
+    margin: 0 auto;
 }
 
 .note-list .note-preview.selected {
     border: 1px solid black;
 }
-
-
 
 .note-list .note-preview img {
     max-height: 300px;
@@ -21,6 +20,7 @@
     margin: 5px;
     border-radius: 5px;
     cursor: pointer;
+    align-self: start;
 }
 
 .note-list .note-preview p {
