--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,8 @@
 @import './cmps/book-app.css';
 @import './cmps/book-add.css';
 @import './cmps/email-app.css';
+@import './cmps/email-inbox.css';
+@import './cmps/side-nav.css';
 @import './cmps/note-list.css';
 
 
