--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,8 @@
 @import './cmps/email-app.css';
 @import './cmps/email-inbox.css';
 @import './cmps/side-nav.css';
+@import './cmps/email-filter.css';
+@import './cmps/email-list.css';
 @import './cmps/note-list.css';
 @import './cmps/note-add.css';
 
