--- a/css/cmps/side-nav.css
+++ b/css/cmps/side-nav.css
@@ -1,15 +1,17 @@
 .side-nav{
     flex: 0 0 200px;
-    border-right: 1px solid green;
+    border-right: 1px solid #EA3939;
     flex-direction: column;
     text-align: center;
+    padding-top: 30px;
 }
 
 .nav-item{
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .nav-item button {
     margin-left: 0;
+    background-color: #EA3939;
 }
