--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -1,8 +1,16 @@
-.note-list {
+/* .note-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 334px));
+    grid-template-columns: repeat(auto-fill, minmax(100px, 330px));
     grid-auto-flow: row;
     margin: 0 auto;
+} */
+
+.note-list {
+    display: grid;
+    grid-auto-flow: row;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+    grid-auto-rows: 56px;
 }
 
 .note-list .note-preview.selected {
@@ -10,14 +18,15 @@
 }
 
 .note-list .note-preview img {
-    max-height: 300px;
-    max-width: 300px;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .note-list .note-preview {
     border: 1px solid gray;
     padding: 10px;
-    margin: 5px;
+    /* margin: 5px; */
     border-radius: 5px;
     cursor: pointer;
     align-self: start;
