--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
 @import './cmps/side-nav.css';
 @import './cmps/email-filter.css';
 @import './cmps/email-list.css';
+@import './cmps/email-preview.css';
 @import './cmps/note-list.css';
 @import './cmps/note-add.css';
 
