--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -5,6 +5,10 @@
     border-bottom: 3px solid #cbd0d0;
 }
 
+.app-header h1{
+    font-size: 40px;
+}
+
 .app-header nav > * {
     color: black;
     margin-left: 40px;
