added more filters

--- a/css/cmps/email-filter.css
+++ b/css/cmps/email-filter.css
@@ -1,7 +1,8 @@
 .email-filter{
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .email-filter h2 {
     color: #EA3939;
+    font-size: 30px;
 }
