--- a/css/cmps/side-nav.css
+++ b/css/cmps/side-nav.css
@@ -3,6 +3,7 @@
     border-right: 1px solid #EA3939;
     flex-direction: column;
     text-align: center;
+    box-shadow: 4px 0px 9px 0px rgba(0,0,0,0.20);
     /* padding-top: 30px; */
 }
 
