--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -7,7 +7,7 @@
 }
 
 .note-list .note-preview {
-    border: 1px solid gray;
+    border: 1px solid #d7d7d7;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -32,10 +32,10 @@
 }
 
 .note-list .note-preview.selected, .note-list .note-preview:hover {
-    box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 5px 1px rgba(185, 185, 185, 0.5);
 }
 
-.note-list .note-preview img {
+.note-list .note-img {
     max-height: 180px;
     max-width: 265px;
     margin-bottom: 20px;
@@ -97,4 +97,11 @@
 
 .note-list .vid-note .iframe {
     border: none;
+}
+
+.note-list .note-pin-img {
+    position: absolute;
+    height: 40px;
+    top: -10px;
+    left: -10px;
 }
