--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -49,7 +49,7 @@
     text-decoration: line-through;
 }
 
-.note-list .note-preview input {
+.note-list .note-preview .todo-checkbox {
     position: fixed;
     top: 1000px;
     left: 1000px;
