--- a/css/cmps/note-list.css
+++ b/css/cmps/note-list.css
@@ -105,3 +105,13 @@
     top: -10px;
     left: -10px;
 }
+
+.note-list .opts textarea {
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: calc(100% - 46px);
+    width: 100%;
+    color: #5d5d5d;
+}
