--- a/css/cmps/email-preview.css
+++ b/css/cmps/email-preview.css
@@ -1,12 +1,16 @@
 .email{
-    padding: 20px;
+    padding: 10px;
     border-top: 1px solid #EA3939;
-    background-color: #f0f0f0;
     transition: 0.3s;
     align-items: baseline;
 }
 .email:last-child{
     border-bottom: 1px solid #EA3939;
+}
+
+.read {
+    background-color: #f0f0f0;
+    font-weight: bold;
 }
 
 .email-content {
@@ -21,7 +25,6 @@
 .email:hover {
     cursor: pointer;
     color: #EA3939;
-    background-color: #f3f3f3;
     box-shadow: 4px 0px 20px -12px rgba(79,79,79,1);    
 }
 
