--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -1,6 +1,6 @@
 .welcome-page img {
     width: 100%;
-    max-height: 350px;
+    height: 70vh;
     object-fit: cover;
 }
 
@@ -15,4 +15,32 @@
     height: 90px;
     margin-bottom: 0;
     font-size: 80px;
+}
+
+@media (max-width: 730px) {
+    .welcome-page img {
+        object-position: right;
+        height: 90vh;
+    }
+    .welcome-page h1 {
+        width: 464px;
+        top: 35%;
+        left: 50%;
+        margin-top: -100px;
+        margin-left: -247px;
+        font-size: 65px;
+    }
+}
+
+@media (max-width: 435px) {
+    .welcome-page h1 {
+        width: 340px;   
+        font-size: 55px;
+        margin-top: -115px;
+        margin-left: -170px;
+    }
+
+    .welcome-page img {
+        height: 70vh;
+    }
 }
