--- a/css/cmps/email-filter.css
+++ b/css/cmps/email-filter.css
@@ -1,5 +1,6 @@
 .email-filter{
     padding: 10px;
+    margin: 10px;
 }
 
 .sort-by {
@@ -20,5 +21,5 @@
 
 .filter-btns button {
     background-color: #EA3939;
-
+    width: 75px;
 }
