--- a/css/cmps/side-nav.css
+++ b/css/cmps/side-nav.css
@@ -16,6 +16,8 @@
     border-radius: 0;
     line-height: 40px;
     transition: 0.3s;
+    text-align: left;
+    padding-left: 20px;
 }
 
 .nav-item .nav-btn{
@@ -25,10 +27,15 @@
 
 .nav-item .nav-btn:hover{
     background-color: #EA3939;
+    color: white;
 }
 
 .fa-plus{
     font-size: large;
     position: relative;
     top: 2px;
+}
+
+.nav-item .compose-btn{
+    color: white;
 }
