--- a/css/base.css
+++ b/css/base.css
@@ -49,3 +49,28 @@ textarea {
     font-family: inherit;
     resize: none;
 }
+
+button {
+    background-color: #36a097;
+    padding: 7px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-left: 15px;
+}
+
+input {
+    outline: none;
+    border-radius: 5px;
+    padding: 7px;
+    width: 200px;
+    border: 1px solid #b0b0b0;
+}
+
+h2 {
+    font-size: 20px;
+    color: #1d9389;
+    font-size: 23px;
+    margin-right: 0;
+}
