--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 @import './cmps/book-add.css';
 @import './cmps/email-app.css';
 @import './cmps/email-inbox.css';
-@import './cmps/side-nav.css';
+@import './cmps/email-nav.css';
 @import './cmps/email-filter.css';
 @import './cmps/email-list.css';
 @import './cmps/email-preview.css';
