note search - start

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
 @import './cmps/email-details.css';
 @import './cmps/note-list.css';
 @import './cmps/note-add.css';
+@import './cmps/note-search.css';
 
 
 
