--- a/css/cmps/email-nav.css
+++ b/css/cmps/email-nav.css
@@ -78,3 +78,9 @@
         transform: translate(0, 0);
     }
 }
+
+@media (max-width: 650px) {
+    .side-nav{
+        position: absolute;
+    }
+}
