--- a/css/cmps/email-filter.css
+++ b/css/cmps/email-filter.css
@@ -12,6 +12,7 @@
     position: fixed;
     top: 20px;
     left: 158px;
+    margin-left: 42px;
     border: 1px solid #EA3939;
     z-index: 1000;
 }
@@ -24,6 +25,13 @@
     background-color: #EA3939;
     width: 75px;
 }
+
+@media (max-width: 800px) {
+    .search-by{
+        margin: 0;
+    }
+}
+
 
 @media (max-width: 650px) {
     .search-by {
