--- a/css/cmps/email-nav.css
+++ b/css/cmps/email-nav.css
@@ -84,7 +84,7 @@
     .side-nav .screen {
         position: fixed;
         top: 0;
-        left: 0;
+        left: 161px;
         width: 100%;
         height: 100%;
         background-color: transparent;
