--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -1,3 +1,7 @@
+.welcome-page {
+    position: relative;
+}
+
 .welcome-page img {
     width: 100%;
     height: 70vh;
@@ -9,12 +13,34 @@
     top: 50%;
     left: 50%;
     margin-top: -120px;
-    margin-left: -265px;
+    margin-left: -245px;
     color: #f6f6f6;
     width: 490px;
     height: 90px;
     margin-bottom: 0;
     font-size: 80px;
+}
+
+.welcome-page .links {
+    position: absolute;
+    top: 190px;
+    left: 50%;
+    margin-left: -200px;
+    width: 400px;
+}
+
+.welcome-page a {
+    font-size: 25px;
+    margin: 20px;
+    padding: 10px;
+    background-color: #fe876c;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+}
+
+.welcome-page a:hover {
+    background-color: #ffa38f;
 }
 
 @media (max-width: 730px) {
@@ -27,20 +53,39 @@
         top: 35%;
         left: 50%;
         margin-top: -100px;
-        margin-left: -247px;
+        margin-left: -230px;
         font-size: 65px;
+    }
+
+    .welcome-page a {
+        margin: 0;
+    }
+
+    .welcome-page .links {
+        width: 330px;
+        margin-left: -165px;
     }
 }
 
-@media (max-width: 435px) {
+@media (max-width: 480px) {
     .welcome-page h1 {
         width: 340px;   
         font-size: 55px;
-        margin-top: -115px;
+        margin-top: -100px;
         margin-left: -170px;
     }
 
     .welcome-page img {
         height: 70vh;
+    }
+    
+    .welcome-page .links {
+        flex-direction: column;
+        position: absolute;
+        top: 150px;
+        left: 5px;
+        margin-left: 0;
+        width: 120px;
+        height: 185px;
     }
 }
