--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -23,7 +23,7 @@
 
 .welcome-page .links {
     position: absolute;
-    top: 250px;
+    top: 190px;
     left: 50%;
     margin-left: -200px;
     width: 400px;
@@ -43,10 +43,15 @@
     background-color: #ffa38f;
 }
 
+.welcome-page .footer {
+    height: calc(30vh - 77px);
+    background-color: #f6f6f6;
+}
+
 @media (max-width: 730px) {
     .welcome-page img {
         object-position: right;
-        height: 90vh;
+        height: 80vh;
     }
     .welcome-page h1 {
         width: 464px;
@@ -65,6 +70,10 @@
         width: 330px;
         margin-left: -165px;
     }
+
+    .welcome-page .footer {
+        height: calc(20vh - 77px);
+    }
 }
 
 @media (max-width: 480px) {
@@ -74,17 +83,13 @@
         margin-top: -100px;
         margin-left: -170px;
     }
-
-    .welcome-page img {
-        height: 70vh;
-    }
     
     .welcome-page .links {
         flex-direction: column;
         position: absolute;
-        top: 170px;
-        left: 40px;
-        margin-left: 0;
+        top: 150px;
+        left: 50%;
+        margin-left: -180px;
         width: 120px;
         height: 185px;
     }
