--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -1,5 +1,6 @@
 .welcome-page {
     position: relative;
+    height: calc(100vh - 73px);
 }
 
 .welcome-page img {
@@ -12,7 +13,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -120px;
+    margin-top: -170px;
     margin-left: -245px;
     color: #f6f6f6;
     width: 490px;
@@ -44,8 +45,14 @@
 }
 
 .welcome-page .footer {
-    height: calc(30vh - 77px);
     background-color: #f6f6f6;
+    width: 100%;
+    flex-grow: 1;
+    margin-right: 5px;
+}
+
+.welcome-page .footer i {
+    margin-right: 5px;
 }
 
 @media (max-width: 730px) {
