--- a/css/cmps/welcome-page.css
+++ b/css/cmps/welcome-page.css
@@ -11,7 +11,7 @@
 
 .welcome-page h1 {
     position: absolute;
-    top: 50%;
+    top: 250px;
     left: 50%;
     margin-top: -170px;
     margin-left: -245px;
@@ -62,7 +62,7 @@
     }
     .welcome-page h1 {
         width: 464px;
-        top: 35%;
+        top: 185px;
         left: 50%;
         margin-top: -100px;
         margin-left: -230px;
@@ -94,10 +94,14 @@
     .welcome-page .links {
         flex-direction: column;
         position: absolute;
-        top: 150px;
+        top: 170px;
         left: 50%;
         margin-left: -180px;
         width: 120px;
         height: 185px;
+    }
+
+    .welcome-page a {
+        font-size: 20px;
     }
 }
